--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.14.1"
   },
   "repository": {
