--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "mongoose": "^4.11.1"
   },
   "repository": {
     "type": "git",
