--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.14.1",
-    "mongoose": "^4.11.1"
+    "mongoose": "^4.11.1",
+    "react-router": "^4.1.1"
   },
   "repository": {
     "type": "git",
