--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -7,8 +7,9 @@
   },
   "dependencies": {
     "material-ui": "^0.18.6",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.0",
+    "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
