--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -9,13 +9,14 @@
     "material-ui": "^0.18.6",
     "moment": "^2.18.1",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "react-vis": "^1.6.6",
-    "victory": "^0.21.1"
+    "recharts": "^1.0.0-alpha.2",
+    "victory": "^0.21.2"
   },
   "scripts": {
     "start": "react-scripts start",
